- [New] 1.21 update! - [New] Added bossType field to custom bosses, to be used in the future for things like automatic boss bars - [New] Added Breach, Density and Wind Burst enchantments to EliteMobs - [New] Added Infested, Oozing, Raid Omen, Trial Omen, Weaving and Wind Charged potion effects to EliteMobs - [New] Added Bogged and Breeze entity types as valid elites and bosses - [New] All enchantments and potion effects now use the same names as in-game, instead of legacy API names - [New] Added compatibility layer that automatically converts legacy API names to the new equivalent, meaning it is not necessary to update the dungeons for them to keep working - [Removal] Removed Super Mobs - [Removal] Removed Schematic Dungeons, 100% of them will brought back as world-based dungeons. Use BetterStructures shrines as a replacement, they're much better. - [Removal] Removed all traces of WorldEdit as a requirement, since schematic dungeons are no longer a feature - [Removal] Removed the region leveling mode and the nightmare mode, they should either be improved or be their own plugin - [Removal] Removed all the code legacy code used to maintain multi-version support since this build will not be able to support anything before 1.21 - [Tweak] Default test boss no longer uses broadcast as a sample command and instead uses say - [Tweak] Fixed typo in stats page of the player em menu
Signed-off-by: MagmaGuy <tiagoarnaut@gmail.com>